@@ -1,7 +1,8 @@
 """ Daviz config module
 """
+from zope.i18nmessageid.message import MessageFactory
+
 PACKAGE = 'eea.daviz'
 ADD_PERMISSION = "eea.daviz: Add presentation"
 
-from zope.i18nmessageid.message import MessageFactory
 EEAMessageFactory = MessageFactory('eea')
